k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-test
  labels:
    app: k8s-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-test
  template:
    metadata:
      labels:
        app: k8s-test
    spec:
      containers:
        - name: k8s-test
          image: soldat2d/k8s-test:latest
          ports:
            - containerPort: 8080
