k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-service
spec:
  selector:
    app: k8s-test
  ports:
    - port: 8040
      targetPort: 8080
