k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/test"
            backend:
              service:
                name: k8s-service
                port:
                  number: 8010
